renamed keyword "element=" to "name="

--- a/examples/Batch - Watson 2003.ipynb
+++ b/examples/Batch - Watson 2003.ipynb
@@ -50,46 +50,46 @@
    "outputs": [],
    "source": [
     "# Bacteria:\n",
-    "bl.add_species(element='X_F', init_conc=5e-4)\n",
-    "bl.add_species(element='X_N', init_conc=1e-4)\n",
-    "bl.add_species(element='X_I', init_conc=2e-5)\n",
-    "bl.add_species(element='X_S', init_conc=2.5e-7)\n",
-    "bl.add_species(element='X_M', init_conc=5e-9)\n",
+    "bl.add_species(name='X_F', init_conc=5e-4)\n",
+    "bl.add_species(name='X_N', init_conc=1e-4)\n",
+    "bl.add_species(name='X_I', init_conc=2e-5)\n",
+    "bl.add_species(name='X_S', init_conc=2.5e-7)\n",
+    "bl.add_species(name='X_M', init_conc=5e-9)\n",
     "\n",
     "# ED\n",
-    "bl.add_species(element='C6H6O', init_conc=10e-4)\n",
-    "bl.add_species(element='CH3COO', init_conc=0)\n",
-    "bl.add_species(element='H2', init_conc=0)\n",
-    "bl.add_species(element='TIC', init_conc=2e-4)\n",
+    "bl.add_species(name='C6H6O', init_conc=10e-4)\n",
+    "bl.add_species(name='CH3COO', init_conc=0)\n",
+    "bl.add_species(name='H2', init_conc=0)\n",
+    "bl.add_species(name='TIC', init_conc=2e-4)\n",
     "\n",
     "k_fe = 0.15\n",
     "k_mn = 0.15\n",
     "\n",
     "# # EA\n",
-    "bl.add_species(element='NO3', init_conc=2.9e-4)\n",
-    "bl.add_species(element='MNO2', init_conc=4e-4 * k_mn)  \n",
-    "bl.add_species(element='FEOOH', init_conc=3e-3 * k_fe)  \n",
-    "bl.add_species(element='SO4', init_conc=6.6e-4)\n",
-    "bl.add_species(element='FEOOH_LR', init_conc=3e-3 * (1 - k_fe))  \n",
-    "bl.add_species(element='MNO2_LR', init_conc=4e-4 * (1 - k_mn))  \n",
+    "bl.add_species(name='NO3', init_conc=2.9e-4)\n",
+    "bl.add_species(name='MNO2', init_conc=4e-4 * k_mn)  \n",
+    "bl.add_species(name='FEOOH', init_conc=3e-3 * k_fe)  \n",
+    "bl.add_species(name='SO4', init_conc=6.6e-4)\n",
+    "bl.add_species(name='FEOOH_LR', init_conc=3e-3 * (1 - k_fe))  \n",
+    "bl.add_species(name='MNO2_LR', init_conc=4e-4 * (1 - k_mn))  \n",
     "\n",
     "# # Reduced EA:\n",
-    "bl.add_species(element='FE2', init_conc=0)\n",
-    "bl.add_species(element='MN2', init_conc=0)\n",
-    "bl.add_species(element='N2', init_conc=0)\n",
-    "bl.add_species(element='H', init_conc=0)\n",
-    "bl.add_species(element='HS', init_conc=0)\n",
-    "bl.add_species(element='CH4', init_conc=0)\n",
+    "bl.add_species(name='FE2', init_conc=0)\n",
+    "bl.add_species(name='MN2', init_conc=0)\n",
+    "bl.add_species(name='N2', init_conc=0)\n",
+    "bl.add_species(name='H', init_conc=0)\n",
+    "bl.add_species(name='HS', init_conc=0)\n",
+    "bl.add_species(name='CH4', init_conc=0)\n",
     "\n",
     "\n",
     "# Add Fe and Mn  sorption  with Kd\n",
-    "bl.add_species(element='Fe2sorbed', init_conc=0)\n",
+    "bl.add_species(name='Fe2sorbed', init_conc=0)\n",
     "bl.add_partition_equilibrium('FE2', 'Fe2sorbed', 0.02)\n",
-    "bl.add_species(element='Mn2sorbed', init_conc=0)\n",
+    "bl.add_species(name='Mn2sorbed', init_conc=0)\n",
     "bl.add_partition_equilibrium('MN2', 'Mn2sorbed', 0.06)\n",
     "\n",
     "# Henry law equilibrium:\n",
-    "bl.add_species(element='CH4g', init_conc=0)\n",
+    "bl.add_species(name='CH4g', init_conc=0)\n",
     "bl.add_partition_equilibrium('CH4', 'CH4g', 1.4e-2)"
    ]
   },
