--- a/examples/Column - Sediment.ipynb
+++ b/examples/Column - Sediment.ipynb
@@ -50,28 +50,28 @@
     "\n",
     "sediment = Column(L, dx, t, dt, w)\n",
     "\n",
-    "sediment.add_species(theta=phi, element='O2', D=368, init_conc=0, bc_top_value=0.231, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=phi, element='NO3', D=359, init_conc=0, bc_top_value=1.5e-3, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=phi, element='Mn2', D=220, init_conc=2e-3, bc_top_value=2e-3, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=phi, element='Fe2', D=127, init_conc=0, bc_top_value=0, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=phi, element='SO4', D=189, init_conc=15, bc_top_value=28, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=phi, element='NH4', D=363, init_conc=22e-3, bc_top_value=22e-3, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=phi, element='CH4', D=220, init_conc=0, bc_top_value=0, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=phi, element='TIC', D=220, init_conc=0, bc_top_value=0, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=phi, element='TIC', D=220, init_conc=0, bc_top_value=0, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=phi, element='TRS', D=284, init_conc=0, bc_top_value=0, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, name='O2', D=368, init_conc=0, bc_top_value=0.231, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, name='NO3', D=359, init_conc=0, bc_top_value=1.5e-3, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, name='Mn2', D=220, init_conc=2e-3, bc_top_value=2e-3, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, name='Fe2', D=127, init_conc=0, bc_top_value=0, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, name='SO4', D=189, init_conc=15, bc_top_value=28, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, name='NH4', D=363, init_conc=22e-3, bc_top_value=22e-3, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, name='CH4', D=220, init_conc=0, bc_top_value=0, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, name='TIC', D=220, init_conc=0, bc_top_value=0, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, name='TIC', D=220, init_conc=0, bc_top_value=0, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, name='TRS', D=284, init_conc=0, bc_top_value=0, bc_top_type='dirichlet', bc_bot_value=0, bc_bot_type='flux')\n",
     "\n",
     "\n",
-    "sediment.add_species(theta=1-phi, element='OM1', D=20, init_conc=15, bc_top_value=180, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=1-phi, element='OM2', D=20, init_conc=5, bc_top_value=40, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=1-phi, element='MnO2', D=20, init_conc=0, bc_top_value=40, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=1-phi, element='FeOH3', D=20, init_conc=0, bc_top_value=75, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=1-phi, element='MnCO3', D=20, init_conc=0, bc_top_value=0, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=1-phi, element='FeCO3', D=20, init_conc=0, bc_top_value=0, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=1-phi, element='adsFe', D=20, init_conc=0, bc_top_value=0, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=1-phi, element='adsMn', D=20, init_conc=0, bc_top_value=0, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=1-phi, element='adsNH4', D=20, init_conc=0, bc_top_value=0, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
-    "sediment.add_species(theta=1-phi, element='FeS', D=20, init_conc=0, bc_top_value=0, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, name='OM1', D=20, init_conc=15, bc_top_value=180, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, name='OM2', D=20, init_conc=5, bc_top_value=40, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, name='MnO2', D=20, init_conc=0, bc_top_value=40, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, name='FeOH3', D=20, init_conc=0, bc_top_value=75, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, name='MnCO3', D=20, init_conc=0, bc_top_value=0, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, name='FeCO3', D=20, init_conc=0, bc_top_value=0, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, name='adsFe', D=20, init_conc=0, bc_top_value=0, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, name='adsMn', D=20, init_conc=0, bc_top_value=0, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, name='adsNH4', D=20, init_conc=0, bc_top_value=0, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, name='FeS', D=20, init_conc=0, bc_top_value=0, bc_top_type='flux', bc_bot_value=0, bc_bot_type='flux')\n",
     "\n",
     "\n",
     "sediment.constants['x1'] = 112\n",
