--- a/examples/test/Calibrated k С1.ipynb
+++ b/examples/test/Calibrated k С1.ipynb
@@ -136,7 +136,7 @@
     "\n",
     "ftc1.add_species(\n",
     "    theta=phi_g/(1-np.log(phi)),\n",
-    "    element='SF6g',\n",
+    "    name='SF6g',\n",
     "    D=D_SF6g,\n",
     "    init_C=0,\n",
     "    bc_top=0,\n",
@@ -146,7 +146,7 @@
     "    w=-0.00)    #-0.055\n",
     "ftc1.add_species(\n",
     "    theta=phi_w/(1-np.log(phi)),\n",
-    "    element='SF6w',\n",
+    "    name='SF6w',\n",
     "    D=D_SF6w,\n",
     "    init_C=0,\n",
     "    bc_top=0,\n",
@@ -158,7 +158,7 @@
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
     "ftc1.add_species(\n",
     "    theta=phi_p,\n",
-    "    element='SF6mp',\n",
+    "    name='SF6mp',\n",
     "    D=1e-18,\n",
     "    init_C=0,\n",
     "    bc_top=0,\n",
@@ -239,7 +239,7 @@
     "\n",
     "ftc2.add_species(\n",
     "    theta=phi_g/(1-np.log(phi)),\n",
-    "    element='SF6g',\n",
+    "    name='SF6g',\n",
     "    D=D_SF6g,\n",
     "    init_C=ftc1.profiles.SF6g,\n",
     "    bc_top=0,\n",
@@ -249,7 +249,7 @@
     "    w=-0.00)    #-0.055\n",
     "ftc2.add_species(\n",
     "    theta=phi_g/(1-np.log(phi)),\n",
-    "    element='SF6w',\n",
+    "    name='SF6w',\n",
     "    D=D_SF6w,\n",
     "    init_C=ftc1.profiles.SF6w,\n",
     "    bc_top=0,\n",
@@ -261,7 +261,7 @@
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
     "ftc2.add_species(\n",
     "    theta=phi_p,\n",
-    "    element='SF6mp',\n",
+    "    name='SF6mp',\n",
     "    D=1e-18,\n",
     "    init_C=ftc1.profiles.SF6mp,\n",
     "    bc_top=0,\n",
@@ -362,7 +362,7 @@
     "\n",
     "ftc3.add_species(\n",
     "    theta=phi_g/(1-np.log(phi)),\n",
-    "    element='SF6g',\n",
+    "    name='SF6g',\n",
     "    D=D_SF6g,\n",
     "    init_C=ftc2.profiles.SF6g,\n",
     "    bc_top=0,\n",
@@ -372,7 +372,7 @@
     "    w=-0.00)    #-0.055\n",
     "ftc3.add_species(\n",
     "    theta=phi_w/(1-np.log(phi)),\n",
-    "    element='SF6w',\n",
+    "    name='SF6w',\n",
     "    D=D_SF6w,\n",
     "    init_C=ftc2.profiles.SF6w,\n",
     "    bc_top=0,\n",
@@ -384,7 +384,7 @@
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
     "ftc3.add_species(\n",
     "    theta=phi_p,\n",
-    "    element='SF6mp',\n",
+    "    name='SF6mp',\n",
     "    D=1e-18,\n",
     "    init_C=ftc2.profiles.SF6mp,\n",
     "    bc_top=0,\n",
