--- a/examples/test/Calibrated k С3-one variable.ipynb
+++ b/examples/test/Calibrated k С3-one variable.ipynb
@@ -170,7 +170,7 @@
     "\n",
     "ftc1.add_species(\n",
     "    theta=phi_g/(1-np.log(phi)),\n",
-    "    element='SF6g',\n",
+    "    name='SF6g',\n",
     "    D=D_SF6g,\n",
     "    init_C=0,\n",
     "    bc_top=0,\n",
@@ -180,7 +180,7 @@
     "    w=-0.00)    #-0.055\n",
     "ftc1.add_species(\n",
     "    theta=phi_w/(1-np.log(phi)),\n",
-    "    element='SF6w',\n",
+    "    name='SF6w',\n",
     "    D=D_SF6w,\n",
     "    init_C=0,\n",
     "    bc_top=0,\n",
@@ -192,7 +192,7 @@
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
     "ftc1.add_species(\n",
     "    theta=phi_p,\n",
-    "    element='SF6mp',\n",
+    "    name='SF6mp',\n",
     "    D=1e-18,\n",
     "    init_C=0,\n",
     "    bc_top=0,\n",
@@ -273,7 +273,7 @@
     "\n",
     "ftc2.add_species(\n",
     "    theta=phi_g/(1-np.log(phi)),\n",
-    "    element='SF6g',\n",
+    "    name='SF6g',\n",
     "    D=D_SF6g,\n",
     "    init_C=ftc1.profiles.SF6g,\n",
     "    bc_top=0,\n",
@@ -283,7 +283,7 @@
     "    w=-0.00)    #-0.055\n",
     "ftc2.add_species(\n",
     "    theta=phi_g/(1-np.log(phi)),\n",
-    "    element='SF6w',\n",
+    "    name='SF6w',\n",
     "    D=D_SF6w,\n",
     "    init_C=ftc1.profiles.SF6w,\n",
     "    bc_top=0,\n",
@@ -295,7 +295,7 @@
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
     "ftc2.add_species(\n",
     "    theta=phi_p,\n",
-    "    element='SF6mp',\n",
+    "    name='SF6mp',\n",
     "    D=1e-18,\n",
     "    init_C=ftc1.profiles.SF6mp,\n",
     "    bc_top=0,\n",
@@ -428,7 +428,7 @@
     "\n",
     "ftc3.add_species(\n",
     "    theta=phi_g/(1-np.log(phi)),\n",
-    "    element='SF6g',\n",
+    "    name='SF6g',\n",
     "    D=D_SF6g,\n",
     "    init_C=ftc2.profiles.SF6g,\n",
     "    bc_top=0,\n",
@@ -438,7 +438,7 @@
     "    w=-0.00)    #-0.055\n",
     "ftc3.add_species(\n",
     "    theta=phi_w/(1-np.log(phi)),\n",
-    "    element='SF6w',\n",
+    "    name='SF6w',\n",
     "    D=D_SF6w,\n",
     "    init_C=ftc2.profiles.SF6w,\n",
     "    bc_top=0,\n",
@@ -450,7 +450,7 @@
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
     "ftc3.add_species(\n",
     "    theta=phi_p,\n",
-    "    element='SF6mp',\n",
+    "    name='SF6mp',\n",
     "    D=1e-18,\n",
     "    init_C=ftc2.profiles.SF6mp,\n",
     "    bc_top=0,\n",
@@ -615,7 +615,7 @@
     "\n",
     "ftc3.add_species(\n",
     "    theta=phi_g/(1-np.log(phi)),\n",
-    "    element='SF6g',\n",
+    "    name='SF6g',\n",
     "    D=D_SF6g,\n",
     "    init_C=ftc2.profiles.SF6g,\n",
     "    bc_top=0,\n",
@@ -625,7 +625,7 @@
     "    w=-0.00)    #-0.055\n",
     "ftc3.add_species(\n",
     "    theta=phi_w/(1-np.log(phi)),\n",
-    "    element='SF6w',\n",
+    "    name='SF6w',\n",
     "    D=D_SF6w,\n",
     "    init_C=ftc2.profiles.SF6w,\n",
     "    bc_top=0,\n",
@@ -637,7 +637,7 @@
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
     "ftc3.add_species(\n",
     "    theta=phi_p,\n",
-    "    element='SF6mp',\n",
+    "    name='SF6mp',\n",
     "    D=1e-18,\n",
     "    init_C=ftc2.profiles.SF6mp,\n",
     "    bc_top=0,\n",
