--- a/examples/test/[Column 1] SF6 _ only thaw periods-Copy1.ipynb
+++ b/examples/test/[Column 1] SF6 _ only thaw periods-Copy1.ipynb
@@ -273,11 +273,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ftc1.add_species(theta=phi_g, element='SF6g', D=D_SF6g, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant')  #-0.055\n",
-    "ftc1.add_species(theta=phi_w, element='SF6w', D=D_SF6w, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant')\n",
+    "ftc1.add_species(theta=phi_g, name='SF6g', D=D_SF6g, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant')  #-0.055\n",
+    "ftc1.add_species(theta=phi_w, name='SF6w', D=D_SF6w, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant')\n",
     "\n",
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
-    "ftc1.add_species(theta=phi_p, element='SF6mp', D=1e-18, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "ftc1.add_species(theta=phi_p, name='SF6mp', D=1e-18, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
     "\n",
     "\n",
     "\n",
