--- a/examples/test/[Column 3] SF6_thaw+freeze_finalupdate-goodcopy.ipynb
+++ b/examples/test/[Column 3] SF6_thaw+freeze_finalupdate-goodcopy.ipynb
@@ -204,11 +204,11 @@
    },
    "outputs": [],
    "source": [
-    "ftc1.add_species(theta=(((phi_g**(10/3))/(phi**2)) / (phi_w + phi_g)), element='SF6g', D= D_SF6g, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.00)  #-0.055\n",
-    "ftc1.add_species(theta=(((phi_w**(10/3))/(phi**2)) / (phi_w + phi_g )), element='SF6w', D= D_SF6w, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.002)\n",
+    "ftc1.add_species(theta=(((phi_g**(10/3))/(phi**2)) / (phi_w + phi_g)), name='SF6g', D= D_SF6g, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.00)  #-0.055\n",
+    "ftc1.add_species(theta=(((phi_w**(10/3))/(phi**2)) / (phi_w + phi_g )), name='SF6w', D= D_SF6w, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.002)\n",
     "\n",
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
-    "ftc1.add_species(theta=phi_p, element='SF6mp', D=1e-18, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "ftc1.add_species(theta=phi_p, name='SF6mp', D=1e-18, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
     "\n",
     "#((phi_g**(10/3))/(phi**2))*\n",
     "#((phi_w**(10/3))/(phi**2))*\n",
@@ -665,11 +665,11 @@
    },
    "outputs": [],
    "source": [
-    "ftc2.add_species(theta=(((phi_g**(10/3))/(phi**2)) / (phi_w + phi_g)), element='SF6g', D= D_SF6g, init_C = prev_g1, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='constant', w = 0.0099)  #-0.055\n",
-    "ftc2.add_species(theta=(((phi_w**(10/3))/(phi**2)) / (phi_w + phi_g)), element='SF6w', D= D_SF6w, init_C = prev_w1, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='constant', w = 0.0099) #0.13\n",
+    "ftc2.add_species(theta=(((phi_g**(10/3))/(phi**2)) / (phi_w + phi_g)), name='SF6g', D= D_SF6g, init_C = prev_g1, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='constant', w = 0.0099)  #-0.055\n",
+    "ftc2.add_species(theta=(((phi_w**(10/3))/(phi**2)) / (phi_w + phi_g)), name='SF6w', D= D_SF6w, init_C = prev_w1, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='constant', w = 0.0099) #0.13\n",
     "\n",
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
-    "ftc2.add_species(theta=phi_p, element='SF6mp', D=1e-18, init_C = prev_p1, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "ftc2.add_species(theta=phi_p, name='SF6mp', D=1e-18, init_C = prev_p1, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
     "\n",
     "#((phi_g**(10/3))/(phi**2))*\n",
     "#((phi_w**(10/3))/(phi**2))*\n",
@@ -1098,11 +1098,11 @@
    },
    "outputs": [],
    "source": [
-    "ftc3.add_species(theta=((((phi_g**(10/3))/(phi**2))) / (phi_w + phi_g)), element='SF6g', D= D_SF6g, init_C = prev_g2, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.00)  #-0.055\n",
-    "ftc3.add_species(theta=(((phi_w**(10/3))/(phi**2)) / (phi_w + phi_g)), element='SF6w', D= D_SF6w, init_C = prev_w2, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.002) #0.13\n",
+    "ftc3.add_species(theta=((((phi_g**(10/3))/(phi**2))) / (phi_w + phi_g)), name='SF6g', D= D_SF6g, init_C = prev_g2, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.00)  #-0.055\n",
+    "ftc3.add_species(theta=(((phi_w**(10/3))/(phi**2)) / (phi_w + phi_g)), name='SF6w', D= D_SF6w, init_C = prev_w2, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.002) #0.13\n",
     "\n",
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
-    "ftc3.add_species(theta=phi_p, element='SF6mp', D=1e-18, init_C = prev_p2, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "ftc3.add_species(theta=phi_p, name='SF6mp', D=1e-18, init_C = prev_p2, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
     "\n",
     "#((phi_g**(10/3))/(phi**2))*\n",
     "#((phi_w**(10/3))/(phi**2))*\n",
@@ -1534,11 +1534,11 @@
    },
    "outputs": [],
    "source": [
-    "ftc4.add_species(theta=(((phi_g**(10/3))/(phi**2)) / (phi_w + phi_g)), element='SF6g', D= D_SF6g, init_C = prev_g3, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='constant', w = 0.0093)  #-0.055\n",
-    "ftc4.add_species(theta=(((phi_w**(10/3))/(phi**2)) / (phi_w + phi_g)), element='SF6w', D= D_SF6w, init_C = prev_w3, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='constant', w = 0.0093) #0.13\n",
+    "ftc4.add_species(theta=(((phi_g**(10/3))/(phi**2)) / (phi_w + phi_g)), name='SF6g', D= D_SF6g, init_C = prev_g3, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='constant', w = 0.0093)  #-0.055\n",
+    "ftc4.add_species(theta=(((phi_w**(10/3))/(phi**2)) / (phi_w + phi_g)), name='SF6w', D= D_SF6w, init_C = prev_w3, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='constant', w = 0.0093) #0.13\n",
     "\n",
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
-    "ftc4.add_species(theta=phi_p, element='SF6mp', D=1e-18, init_C = prev_p3, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "ftc4.add_species(theta=phi_p, name='SF6mp', D=1e-18, init_C = prev_p3, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
     "\n",
     "#((phi_g**(10/3))/(phi**2))*\n",
     "#((phi_w**(10/3))/(phi**2))*\n",
@@ -1968,11 +1968,11 @@
    },
    "outputs": [],
    "source": [
-    "ftc5.add_species(theta=(((phi_g**(10/3))/(phi**2)) / (phi_w + phi_g)), element='SF6g', D= D_SF6g, init_C = prev_g4, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = 0.0)  #-0.055\n",
-    "ftc5.add_species(theta=(((phi_w**(10/3))/(phi**2)) / (phi_w + phi_g)), element='SF6w', D= D_SF6w, init_C = prev_w4, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = 0.002) #0.13\n",
+    "ftc5.add_species(theta=(((phi_g**(10/3))/(phi**2)) / (phi_w + phi_g)), name='SF6g', D= D_SF6g, init_C = prev_g4, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = 0.0)  #-0.055\n",
+    "ftc5.add_species(theta=(((phi_w**(10/3))/(phi**2)) / (phi_w + phi_g)), name='SF6w', D= D_SF6w, init_C = prev_w4, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = 0.002) #0.13\n",
     "\n",
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
-    "ftc5.add_species(theta=phi_p, element='SF6mp', D=1e-18, init_C = prev_p4, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "ftc5.add_species(theta=phi_p, name='SF6mp', D=1e-18, init_C = prev_p4, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
     "\n",
     "#((phi_g**(10/3))/(phi**2))*\n",
     "#((phi_w**(10/3))/(phi**2))*\n",
@@ -2401,11 +2401,11 @@
    },
    "outputs": [],
    "source": [
-    "ftc6.add_species(theta=(((phi_g**(10/3))/(phi**2)) / (phi_w + phi_g)), element='SF6g', D= D_SF6g, init_C = prev_g5, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='constant', w = 0.00)  #-0.055\n",
-    "ftc6.add_species(theta=(((phi_w**(10/3))/(phi**2)) / (phi_w + phi_g)), element='SF6w', D= D_SF6w, init_C = prev_w5, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='constant', w = 0.00) #0.13\n",
+    "ftc6.add_species(theta=(((phi_g**(10/3))/(phi**2)) / (phi_w + phi_g)), name='SF6g', D= D_SF6g, init_C = prev_g5, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='constant', w = 0.00)  #-0.055\n",
+    "ftc6.add_species(theta=(((phi_w**(10/3))/(phi**2)) / (phi_w + phi_g)), name='SF6w', D= D_SF6w, init_C = prev_w5, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='constant', w = 0.00) #0.13\n",
     "\n",
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
-    "ftc6.add_species(theta=phi_p, element='SF6mp', D=1e-18, init_C = prev_p5, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "ftc6.add_species(theta=phi_p, name='SF6mp', D=1e-18, init_C = prev_p5, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
     "\n",
     "#((phi_g**(10/3))/(phi**2))*\n",
     "#((phi_w**(10/3))/(phi**2))*\n",
