--- a/examples/test/498 nz x100 prelim.ipynb
+++ b/examples/test/498 nz x100 prelim.ipynb
@@ -210,11 +210,11 @@
    },
    "outputs": [],
    "source": [
-    "ftc1.add_species(theta=phi_g/phi**2, element='SF6g', D= D_SF6g, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.00)  #-0.055\n",
-    "ftc1.add_species(theta=phi_w/phi**2, element='SF6w', D= D_SF6w, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = w)\n",
+    "ftc1.add_species(theta=phi_g/phi**2, name='SF6g', D= D_SF6g, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.00)  #-0.055\n",
+    "ftc1.add_species(theta=phi_w/phi**2, name='SF6w', D= D_SF6w, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = w)\n",
     "\n",
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
-    "ftc1.add_species(theta=phi_p, element='SF6mp', D=1e-18, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "ftc1.add_species(theta=phi_p, name='SF6mp', D=1e-18, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
     "\n",
     "\n",
     "# # Constants\n",
