--- a/examples/test/Calibrated k С3.ipynb
+++ b/examples/test/Calibrated k С3.ipynb
@@ -174,7 +174,7 @@
     "\n",
     "ftc1.add_species(\n",
     "    theta=phi_g/(1-np.log(phi)),\n",
-    "    element='SF6g',\n",
+    "    name='SF6g',\n",
     "    D=D_SF6g,\n",
     "    init_C=0,\n",
     "    bc_top=0,\n",
@@ -184,7 +184,7 @@
     "    w=-0.00)    #-0.055\n",
     "ftc1.add_species(\n",
     "    theta=phi_w/(1-np.log(phi)),\n",
-    "    element='SF6w',\n",
+    "    name='SF6w',\n",
     "    D=D_SF6w,\n",
     "    init_C=0,\n",
     "    bc_top=0,\n",
@@ -196,7 +196,7 @@
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
     "ftc1.add_species(\n",
     "    theta=phi_p,\n",
-    "    element='SF6mp',\n",
+    "    name='SF6mp',\n",
     "    D=1e-18,\n",
     "    init_C=0,\n",
     "    bc_top=0,\n",
@@ -277,7 +277,7 @@
     "\n",
     "ftc2.add_species(\n",
     "    theta=phi_g/(1-np.log(phi)),\n",
-    "    element='SF6g',\n",
+    "    name='SF6g',\n",
     "    D=D_SF6g,\n",
     "    init_C=ftc1.profiles.SF6g,\n",
     "    bc_top=0,\n",
@@ -287,7 +287,7 @@
     "    w=-0.00)    #-0.055\n",
     "ftc2.add_species(\n",
     "    theta=phi_g/(1-np.log(phi)),\n",
-    "    element='SF6w',\n",
+    "    name='SF6w',\n",
     "    D=D_SF6w,\n",
     "    init_C=ftc1.profiles.SF6w,\n",
     "    bc_top=0,\n",
@@ -299,7 +299,7 @@
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
     "ftc2.add_species(\n",
     "    theta=phi_p,\n",
-    "    element='SF6mp',\n",
+    "    name='SF6mp',\n",
     "    D=1e-18,\n",
     "    init_C=ftc1.profiles.SF6mp,\n",
     "    bc_top=0,\n",
@@ -412,7 +412,7 @@
     "\n",
     "ftc3.add_species(\n",
     "    theta=phi_g/(1-np.log(phi)),\n",
-    "    element='SF6g',\n",
+    "    name='SF6g',\n",
     "    D=D_SF6g,\n",
     "    init_C=ftc2.profiles.SF6g,\n",
     "    bc_top=0,\n",
@@ -422,7 +422,7 @@
     "    w=-0.00)    #-0.055\n",
     "ftc3.add_species(\n",
     "    theta=phi_w/(1-np.log(phi)),\n",
-    "    element='SF6w',\n",
+    "    name='SF6w',\n",
     "    D=D_SF6w,\n",
     "    init_C=ftc2.profiles.SF6w,\n",
     "    bc_top=0,\n",
@@ -434,7 +434,7 @@
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
     "ftc3.add_species(\n",
     "    theta=phi_p,\n",
-    "    element='SF6mp',\n",
+    "    name='SF6mp',\n",
     "    D=1e-18,\n",
     "    init_C=ftc2.profiles.SF6mp,\n",
     "    bc_top=0,\n",
