--- a/examples/test/Calibrated many periods.ipynb
+++ b/examples/test/Calibrated many periods.ipynb
@@ -182,11 +182,11 @@
    },
    "outputs": [],
    "source": [
-    "ftc1.add_species(theta=((phi_g**(10/3))/(phi**2)), element='SF6g', D= D_SF6g, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.00)  #-0.055\n",
-    "ftc1.add_species(theta=((phi_w**(10/3))/(phi**2)), element='SF6w', D= D_SF6w, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = w)\n",
+    "ftc1.add_species(theta=((phi_g**(10/3))/(phi**2)), name='SF6g', D= D_SF6g, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.00)  #-0.055\n",
+    "ftc1.add_species(theta=((phi_w**(10/3))/(phi**2)), name='SF6w', D= D_SF6w, init_C=0, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = w)\n",
     "\n",
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
-    "ftc1.add_species(theta=phi_p, element='SF6mp', D=1e-18, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "ftc1.add_species(theta=phi_p, name='SF6mp', D=1e-18, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
     "\n",
     "\n",
     "# # Constants\n",
@@ -570,11 +570,11 @@
    },
    "outputs": [],
    "source": [
-    "ftc2.add_species(theta=((phi_g**(10/3))/(phi**2)), element='SF6g', D= D_SF6g, init_C=ftc1.profiles.SF6g, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.00)  #-0.055\n",
-    "ftc2.add_species(theta=((phi_w**(10/3))/(phi**2)), element='SF6w', D= D_SF6w, init_C=ftc1.profiles.SF6w, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = w)\n",
+    "ftc2.add_species(theta=((phi_g**(10/3))/(phi**2)), name='SF6g', D= D_SF6g, init_C=ftc1.profiles.SF6g, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.00)  #-0.055\n",
+    "ftc2.add_species(theta=((phi_w**(10/3))/(phi**2)), name='SF6w', D= D_SF6w, init_C=ftc1.profiles.SF6w, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = w)\n",
     "\n",
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
-    "ftc2.add_species(theta=phi_p, element='SF6mp', D=1e-18, init_C=ftc1.profiles.SF6mp, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "ftc2.add_species(theta=phi_p, name='SF6mp', D=1e-18, init_C=ftc1.profiles.SF6mp, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
     "\n",
     "\n",
     "# # Constants\n",
@@ -939,11 +939,11 @@
    },
    "outputs": [],
    "source": [
-    "ftc3.add_species(theta=((phi_g**(10/3))/(phi**2)), element='SF6g', D= D_SF6g, init_C=ftc2.profiles.SF6g, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.00)  #-0.055\n",
-    "ftc3.add_species(theta=((phi_w**(10/3))/(phi**2)), element='SF6w', D= D_SF6w, init_C=ftc2.profiles.SF6w, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = w)\n",
+    "ftc3.add_species(theta=((phi_g**(10/3))/(phi**2)), name='SF6g', D= D_SF6g, init_C=ftc2.profiles.SF6g, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = -0.00)  #-0.055\n",
+    "ftc3.add_species(theta=((phi_w**(10/3))/(phi**2)), name='SF6w', D= D_SF6w, init_C=ftc2.profiles.SF6w, bc_top=0, bc_top_type='constant', bc_bot=0, bc_bot_type='constant', w = w)\n",
     "\n",
     "# SF6mp stands for SF6 gas in micro pores, it is immobile and only collects SF6;\n",
-    "ftc3.add_species(theta=phi_p, element='SF6mp', D=1e-18, init_C=ftc2.profiles.SF6mp, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "ftc3.add_species(theta=phi_p, name='SF6mp', D=1e-18, init_C=ftc2.profiles.SF6mp, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
     "\n",
     "\n",
     "# # Constants\n",
