--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,14 @@
 # porousmedialab changelog
 
+## 1.3.6
+
+2019-09-04
+
+### FIXED
+
+- Due to floating point error the Calibrator sometimes couldnt find an index of intersection of simulated values with observed ones
+
+
 ## 1.3.5
 
 2019-06-28
