--- a/examples/Batch - Roden 2008.ipynb
+++ b/examples/Batch - Roden 2008.ipynb
@@ -18,102 +18,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tend = 40\n",
-    "dt = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bl = Batch(tend, dt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ED\n",
+    "from porousmedialab.batch import Batch\n",
+    "\n",
+    "bl = Batch(tend=40, dt=1)\n",
+    "\n",
     "bl.add_species(name='POC', init_conc=12e-3)\n",
     "bl.add_species(name='CO2', init_conc=2e-3)\n",
     "bl.add_species(name='Fe2', init_conc=0)\n",
     "bl.add_species(name='CH4', init_conc=0)\n",
-    "\n",
-    "# EA\n",
     "bl.add_species(name='NO3', init_conc=1.5e-3)\n",
     "bl.add_species(name='Fe3', init_conc=20e-3)\n",
-    "bl.add_species(name='SO4', init_conc=1.7e-3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "bl.add_species(name='SO4', init_conc=1.7e-3)\n",
+    "\n",
     "bl.constants['Km_NO3'] = 0.001e-3\n",
     "bl.constants['Km_Fe3'] = 2e-3\n",
     "bl.constants['Km_SO4'] = 0.3e-4\n",
-    "bl.constants['k1'] = 0.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "bl.constants['k1'] = 0.1\n",
+    "\n",
     "bl.rates['r_NO3'] = 'k1 * POC * NO3 / (Km_NO3 + NO3)'\n",
     "bl.rates['r_Fe3'] = 'k1 * POC *Fe3 / (Km_Fe3 +Fe3) * Km_NO3 / (Km_NO3 + NO3)'\n",
     "bl.rates['r_SO4'] = 'k1 * POC * SO4 / (Km_SO4 + SO4) * Km_Fe3 / (Km_Fe3 +Fe3) * Km_NO3 / (Km_NO3 + NO3)'\n",
-    "bl.rates['r_CH4'] = 'k1 * POC * Km_SO4 / (Km_SO4 + SO4) * Km_Fe3 / (Km_Fe3 +Fe3) * Km_NO3 / (Km_NO3 + NO3)'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "bl.rates['r_CH4'] = 'k1 * POC * Km_SO4 / (Km_SO4 + SO4) * Km_Fe3 / (Km_Fe3 +Fe3) * Km_NO3 / (Km_NO3 + NO3)'\n",
+    "\n",
     "bl.dcdt['POC'] = '- r_NO3 - r_Fe3 - r_SO4 - r_CH4'\n",
     "bl.dcdt['NO3'] = '- 4 / 5 * r_NO3'\n",
     "bl.dcdt['Fe3'] = '- 4 * r_Fe3'\n",
     "bl.dcdt['Fe2'] = '4 * r_Fe3'\n",
     "bl.dcdt['SO4'] = '- 1 / 2 * r_SO4'\n",
     "bl.dcdt['CO2'] = 'r_NO3 + r_Fe3 + r_SO4 + 0.5 * r_CH4'\n",
-    "bl.dcdt['CH4'] = '1 / 2 * r_CH4'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulation started:\n",
-      "\t 2019-02-07 16:34:49\n"
-     ]
-    }
-   ],
-   "source": [
+    "bl.dcdt['CH4'] = '1 / 2 * r_CH4'\n",
+    "\n",
     "bl.solve()"
    ]
   },
@@ -212,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   },
   "nteract": {
    "version": "0.11.9"
