test: add comprehensive test coverage for PorousMediaLab
Before major refactoring, comprehensive pytest test suite was needed to
ensure existing functionality is preserved. This adds 256 tests covering
all core modules including batch/column simulations, ODE solvers, pH
calculations, metrics, and I/O operations.

- Add pytest infrastructure (pytest.ini, conftest.py with fixtures)
- Create 13 test files covering: dotdict, equilibriumsolver, metrics,
  phcalc, desolver, vg, lab, batch, column, saver, calibrator,
  analytical solutions, and plotter (smoke tests)
- Replace sys.exit() with InvalidBoundaryConditionError in desolver.py
- Fix NumPy 2.0 compatibility (np.NaN -> np.nan in metrics.py)
- Fix escape sequence warnings in plotter.py
- Update README with testing instructions
- Update changelog for version 1.5.0

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,21 @@
 # porousmedialab changelog
 
+## 1.5.0
+
+2025-01-30
+
+### NEW
+
+- Comprehensive pytest test suite with 256 tests covering all modules
+- Test fixtures in conftest.py for common test objects
+- pytest.ini configuration file
+
+### IMPROVED
+
+- Replaced sys.exit() with InvalidBoundaryConditionError exception in desolver.py
+- Fixed NumPy 2.0 compatibility (np.NaN -> np.nan in metrics.py)
+- Fixed escape sequence warnings in plotter.py
+
 ## 1.4.1
 
 2019-10-09
