feat: add poetry for dependency management
Migrated from bare setup.py (which had no dependencies declared) to
modern Poetry with pyproject.toml. This ensures reproducible installs
and explicit dependency tracking.

Changes:
- Add pyproject.toml with all runtime dependencies and PyPI classifiers
- Add poetry.lock for reproducible installs
- Migrate pytest config from pytest.ini to pyproject.toml
- Add coverage configuration
- Update CI to use Poetry and test Python 3.10-3.13
- Update README with Poetry installation instructions
- Bump version to 1.5.1
- Require Python 3.10+ (scipy compatibility)

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,21 @@
 # porousmedialab changelog
 
+## 1.5.1
+
+2025-01-30
+
+### NEW
+
+- Added Poetry for dependency management with pyproject.toml
+- All dependencies now explicitly declared (numpy, scipy, matplotlib, seaborn, h5py, scikit-learn, numexpr)
+- Added poetry.lock for reproducible installs
+
+### CHANGED
+
+- Minimum Python version is now 3.10
+- Replaced setup.py with modern pyproject.toml (PEP 517/518)
+- Migrated test configuration from setup.cfg to pyproject.toml
+
 ## 1.5.0
 
 2025-01-30
@@ -138,7 +154,3 @@
 ### FIXED
 
 - clashed method names
-
-
-
-
